include/transcribe.h


typedef enum {
    TRANSCRIBE_OK                         = 0,
    TRANSCRIBE_ERR_INVALID_ARG            = 1,
    TRANSCRIBE_ERR_NOT_IMPLEMENTED        = 2,
    TRANSCRIBE_ERR_FILE_NOT_FOUND         = 3,
    TRANSCRIBE_ERR_GGUF                   = 4,
    TRANSCRIBE_ERR_UNSUPPORTED_ARCH       = 5,
    TRANSCRIBE_ERR_UNSUPPORTED_VARIANT    = 6,
    TRANSCRIBE_ERR_OOM                    = 7,
    TRANSCRIBE_ERR_BACKEND                = 8,
    TRANSCRIBE_ERR_SAMPLE_RATE            = 9,
    TRANSCRIBE_ERR_UNSUPPORTED_LANGUAGE   = 10,
    TRANSCRIBE_ERR_UNSUPPORTED_TASK       = 11,
    TRANSCRIBE_ERR_UNSUPPORTED_TIMESTAMPS = 12,
    TRANSCRIBE_ERR_ABORTED                = 13,
    TRANSCRIBE_ERR_BAD_STRUCT_SIZE        = 14,
    TRANSCRIBE_ERR_UNSUPPORTED_PNC        = 15,
    TRANSCRIBE_ERR_UNSUPPORTED_ITN        = 16,
    TRANSCRIBE_ERR_INPUT_TOO_LONG         = 17,
    TRANSCRIBE_ERR_OUTPUT_TRUNCATED       = 18,
} transcribe_status;
TRANSCRIBE_API const char * transcribe_status_string(int status);
TRANSCRIBE_API const char * transcribe_version(void);
TRANSCRIBE_API const char * transcribe_version_commit(void);
typedef enum {
    TRANSCRIBE_ABI_MODEL_LOAD_PARAMS = 0,
    TRANSCRIBE_ABI_SESSION_PARAMS    = 1,
    TRANSCRIBE_ABI_RUN_PARAMS        = 2,
    TRANSCRIBE_ABI_STREAM_PARAMS     = 3,
    TRANSCRIBE_ABI_CAPABILITIES      = 4,
    TRANSCRIBE_ABI_TIMINGS           = 5,
    TRANSCRIBE_ABI_SEGMENT           = 6,
    TRANSCRIBE_ABI_WORD              = 7,
    TRANSCRIBE_ABI_TOKEN             = 8,
    TRANSCRIBE_ABI_STREAM_UPDATE     = 9,
    TRANSCRIBE_ABI_STREAM_TEXT       = 10,
    TRANSCRIBE_ABI_SESSION_LIMITS    = 11,
    TRANSCRIBE_ABI_EXT               = 12,
    TRANSCRIBE_ABI_BACKEND_DEVICE    = 13,
} transcribe_abi_struct;
TRANSCRIBE_API size_t transcribe_abi_struct_size(transcribe_abi_struct which);
TRANSCRIBE_API size_t transcribe_abi_struct_align(transcribe_abi_struct which);
typedef enum {
    TRANSCRIBE_LOG_LEVEL_NONE  = 0,
    TRANSCRIBE_LOG_LEVEL_INFO  = 1,
    TRANSCRIBE_LOG_LEVEL_WARN  = 2,
    TRANSCRIBE_LOG_LEVEL_ERROR = 3,
    TRANSCRIBE_LOG_LEVEL_DEBUG = 4,
    TRANSCRIBE_LOG_LEVEL_CONT  = 5, 
} transcribe_log_level;
typedef void (*transcribe_log_callback)(transcribe_log_level level, const char * msg, void * userdata);
TRANSCRIBE_API void transcribe_log_set(transcribe_log_callback cb, void * userdata);
typedef enum {
    TRANSCRIBE_TASK_TRANSCRIBE = 0,
    TRANSCRIBE_TASK_TRANSLATE  = 1,
} transcribe_task;
typedef enum {
    TRANSCRIBE_TIMESTAMPS_NONE    = 0,
    TRANSCRIBE_TIMESTAMPS_AUTO    = 1,
    TRANSCRIBE_TIMESTAMPS_SEGMENT = 2,
    TRANSCRIBE_TIMESTAMPS_WORD    = 3,
    TRANSCRIBE_TIMESTAMPS_TOKEN   = 4,
} transcribe_timestamp_kind;
typedef enum {
    TRANSCRIBE_KV_TYPE_AUTO = 0,
    TRANSCRIBE_KV_TYPE_F32  = 1,
    TRANSCRIBE_KV_TYPE_F16  = 2,
} transcribe_kv_type;
enum transcribe_pnc_mode {
    TRANSCRIBE_PNC_MODE_DEFAULT = 0,
    TRANSCRIBE_PNC_MODE_OFF     = 1,
    TRANSCRIBE_PNC_MODE_ON      = 2,
};
enum transcribe_itn_mode {
    TRANSCRIBE_ITN_MODE_DEFAULT = 0,
    TRANSCRIBE_ITN_MODE_OFF     = 1,
    TRANSCRIBE_ITN_MODE_ON      = 2,
};
struct transcribe_model;
struct transcribe_session;
struct transcribe_ext {
    uint64_t size;
    uint32_t kind;
};
TRANSCRIBE_API transcribe_status transcribe_ext_check(const struct transcribe_ext * ext,
                                                      uint32_t                      expected_kind,
                                                      uint64_t                      min_size);
typedef enum {
    TRANSCRIBE_EXT_SLOT_RUN    = 0,
    TRANSCRIBE_EXT_SLOT_STREAM = 1,
} transcribe_ext_slot;
TRANSCRIBE_API bool transcribe_model_accepts_ext_kind(const struct transcribe_model * model,
                                                      transcribe_ext_slot             slot,
                                                      uint32_t                        kind);
typedef enum {
    TRANSCRIBE_BACKEND_AUTO      = 0,
    TRANSCRIBE_BACKEND_CPU       = 1,
    TRANSCRIBE_BACKEND_METAL     = 2,
    TRANSCRIBE_BACKEND_VULKAN    = 3,
    TRANSCRIBE_BACKEND_CPU_ACCEL = 4,
    TRANSCRIBE_BACKEND_CUDA      = 5,
} transcribe_backend_request;
TRANSCRIBE_API transcribe_status transcribe_init_backends(const char * artifact_dir);
TRANSCRIBE_API transcribe_status transcribe_init_backends_default(void);
TRANSCRIBE_API int transcribe_backend_device_count(void);
typedef enum {
    TRANSCRIBE_DEVICE_TYPE_CPU   = 0, 
    TRANSCRIBE_DEVICE_TYPE_GPU   = 1, 
    TRANSCRIBE_DEVICE_TYPE_IGPU  = 2, 
    TRANSCRIBE_DEVICE_TYPE_ACCEL = 3, 
} transcribe_device_type;
struct transcribe_backend_device {
    uint64_t               struct_size;  
    const char *           name;         
    const char *           description;  
    const char *           kind;         
    const char *           device_id;    
    uint64_t               memory_total; 
    uint64_t               memory_free;  
    transcribe_device_type device_type;  
};